# GAME-of-LIFE

./: CMakeLists.txt  MAP.cpp  MAP.h  README.md  main.cpp
cmake/: FindSDL2.cmake
